clang/test/BSC/Negative/Method/Enum/enum_this_param_check/enum_this_param_check.cbs
// RUN: %clang_cc1 -verify %s

enum E {
    X3,
    X4
};

int enum E::getA(enum E this); // expected-error {{type of parameter 'this' is wrong, expected 'This*' or 'enum E*', but found 'enum E'}}

